# peroxide

./: .gitignore  .gitmodules  Cargo.toml  Peroxide.toml  README.md  TODO.md  tailwind.config.js
.sqlx/: query-0468e150d315c1c0625e5217c4c5eae67b0dec38d65141d9c24e422024595484.json  query-091931dd2ffffd7f9afb29853bae4a4195f558bfd52e2946bbb4ef6662381183.json  query-0ed53d75a91520d497f083e0863b20a7261732ab95ca603371bbb547a7a06a03.json  query-3fea6e2d814a029ff0a0a2ca684b51b3e894455435e853d19dabbc7b5fb3ab20.json  query-50e0beb82e0cd9b5da8f935419ce840dbb3cd12a48678438e987398e257d71f4.json  query-62ccc3af6a80f1920fd0b82b53a505523030181e713fb9567d500316e7045ce8.json  query-63b02241239cfaa38cffb42c4bcb2c5c13be1d239134a649f53e92c328ba3969.json  query-6da89aeb1268b4c4e64490ed7b037a4ac9a7ff3b9433943f9d845da3d86615f7.json  query-7c76fea48b46749b62272ca416d095e9d522bbab41ac8987ed9772f5317b4293.json  query-9071698ba367b9ac89002c77734f7f599772bf69105dbb998a7fbf2475f7526b.json  query-ab2031906426008e6de378bceefc77ccc570d9625ac503e02210c002744293f9.json  query-ced207365f61e75989cf9f80a52545a19939588deef6ee2772cf6bfc96345279.json  query-d03e42a8deca295cb7b21d5601a227d9111d7b03647e91373b14865f2d1e97fe.json  query-d34dd64d2bc3327cdc76f7882849dd7f94d402c8b7f1aa6ae1674487d6ff746d.json  query-d8998e5a623bb9a2b474369ba04762ae6a3eb538876f50b1036f88695725161a.json  query-f45cb3bf7aed4c53a34daf997a0f495bcbb370ded427feda5f30cc28eafa3d7c.json
admin_panel/: blog_row.html  index.html  navbar.html  post.html  settings.html  templates.html
admin_panel/static/: style.css
data/: admin.templ.html  post.html
example_site/: PeroxideSite.toml
example_site/static/: index.css  sign_in.js
example_site/templates/: abc.html  blog.html  index.html  navbar.html  sign_in.html  sign_up.html
src/: auth.rs  config.rs  lib.rs  main.rs  post.rs  site.rs  wordpress.rs
src/auth/: admin.rs  sign_in.rs  sign_up.rs  user.rs
