[package]
name = "peroxide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ammonia = "3.3.0"
axum = {version = "0.7.3", features = ["macros"] }
axum-extra = { version = "0.9.1", features = ["cookie", "cookie-private"] }
base64 = "0.21.5"
chrono = "0.4.31"
clap = { version = "4.4.18", features = ["derive"] }
comrak = { version = "0.20.0", features = ["emojis"] }
jsonwebtoken = "9.2.0"
log = "0.4.20"
once_cell = "1.19.0"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.111"
sha3 = "0.10.8"
sqlx = { version = "0.7.3", features = [ "runtime-tokio", "tls-rustls" ,"sqlite" ] }
tinytemplate-async = "1.1.2"
tokio = { version = "1.35.1", features = ["full"] }
toml = "0.8.8"
tower-http = { version = "0.5.0", features = ["full"] }
