[package]
name = "peroxide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ammonia = "3.3.0"
anyhow = { version = "1.0.81", features = ["backtrace"] }
axum = {version = "0.7.3", features = ["macros"] }
axum-extra = { version = "0.9.1", features = ["cookie", "cookie-private"] }
axum_typed_multipart = "0.11.0"
base64 = "0.21.5"
chrono = "0.4.31"
clap = { version = "4.4.18", features = ["derive"] }
comrak = { version = "0.20.0", features = ["emojis"] }
future-utils = "0.12.1"
futures = "0.3.30"
inquire = "0.7.3"
jsonwebtoken = "9.2.0"
log = "0.4.20"
multer = "3.0.0"
once_cell = "1.19.0"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
reqwest = "0.11.24"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.111"
sha3 = "0.10.8"
sqlx = { version = "0.7.3", features = [ "runtime-tokio", "tls-rustls" ,"sqlite" ] }
tinytemplate-async = "1.1.2"
tokio = { version = "1.35.1", features = ["full"] }
toml = "0.8.8"
tower-http = { version = "0.5.0", features = ["full"] }
